Preserve whitespace in district description Resolves #49

--- a/resources/public/css/style.main.less
+++ b/resources/public/css/style.main.less
@@ -1508,6 +1508,11 @@ form {
   margin-bottom: 30px;
 }
 
+.district-description {
+  font: 400 16px/1.68 'proxima-soft', sans-serif;
+  white-space: pre-line;
+}
+
 /*! - mq: 450 */
 
 @media screen and (max-width:450px) {
